--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
+<body id="background" background="assets/images/watercolor_world.jpg">
 	<div id="overall-container">
 	<header>
 		<h1><i class="fa fa-plane" id="plane-img" aria-hidden="true"></i>Hangman on Holiday:</h1>
