redoing js in progress

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<p>Current Word</p>
 			<br/>
 
-			<div id="listed"></div>
+			<div id="active-word"></div>
 			<br/>
 
 			<div id="counter">Number of Guesses Left</div>
