the js overfloweth

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			<p>Press any key to get started!</p>
 			<br/>
 
-			<div id="wins">Wins</div>
+			<div>You've won <span id="wins"></span> times!</div>
 			<br/>
 
-			<p>Current Word</p>
+			<p>Current Word:</p>
 			<br/>
 
 			<div id="active-word"></div>
@@ -45,7 +45,8 @@
 			<div id="counter">Number of Guesses Left</div>
 			<br/>
 
-			<div id="guessed">Letters Already Guessed</div>
+			<p>Letters Already Guessed:</p>
+			<div id="guessed"></div>
 		</div>
 	</div>
 	</section>
