--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div id="active-word"></div>
 			<br/>
 
-			<div id="counter">Number of Guesses Left</div>
+			<div>You have <span id="guess-counter"></span> guesses left..</div>
 			<br/>
 
 			<p>Letters Already Guessed:</p>
