--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div>You have <span id="guess-counter"></span> guesses left..</div>
 			<br/>
 
-			<p>Letters Already Guessed:</p>
+			<p>Letters already guessed:</p>
 			<div id="guessed"></div>
 		</div>
 	</div>
