tons of js fixes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body id="background" background="assets/images/watercolor_world.jpg">
-	<div id="overall-container">
+	<div>
 	<header>
 		<h1><i class="fa fa-plane" id="plane-img" aria-hidden="true"></i>Hangman on Holiday:</h1>
 		<h2>Around the world in 26 letters</h2>
@@ -33,7 +33,7 @@
 			<p>Press any key to get started!</p>
 			<br/>
 
-			<div>You've won <span id="wins"></span> times!</div>
+			<div>You've won <span id="wins">0</span> times!</div>
 			<br/>
 
 			<p>Current Word:</p>
@@ -42,7 +42,7 @@
 			<br/>
 			<br/>
 
-			<div>You have <span id="guess-counter"></span> guesses left..</div>
+			<div>You have <span id="guess-counter">7</span> guesses left..</div>
 			<br/>
 
 			<p>Letters already guessed:</p>
