huge changes js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div id="right-col">
-			<p>Press any key to get started!</p>
+			<p id="start-text"></p>
 			<br/>
 
 			<div>You've won <span id="wins">0</span> times!</div>
