playing with texts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<p id="start-text"></p>
 			<br/>
 
-			<div>You've won <span id="wins">0</span> times!</div>
+			<div>Number of Victories: <span id="wins">0</span></div>
 			<br/>
 
 			<p>Current Word:</p>
@@ -42,11 +42,11 @@
 			<br/>
 			<br/>
 
-			<div>You have <span id="guess-counter">7</span> guesses left..</div>
+			<div>Guesses left: <span id="guess-counter">7</span></div>
 			<br/>
 
-			<p>Letters already guessed:</p>
 			<div id="guessed"></div>
+			<p id="wrongs-list"></p>
 		</div>
 	</div>
 	</section>
